# mapyta

./: .coderabbit.yaml  .gitignore  .readthedocs.yaml  .ruff.toml  LICENSE  README.md  index.html  properdocs.yml  pyproject.toml
.github/workflows/: docs-preview.yml  docs.yml  lint.yml  publish.yml  tests.yml
API reference/: index.html
API reference/dataframe/: index.html
API reference/export/: index.html
API reference/geojson/: index.html
API reference/map/: index.html
API reference/markdown/: index.html
API reference/markers/: index.html
API reference/mouse_position/: index.html
API reference/style/: index.html
API reference/tiles/: index.html
docs/: .nav.yml  index.md  showcase.md
docs/_scripts/: generate_index.py  generate_reference_pages.py
docs/tutorial/: .nav.yml  advanced.md  animated.md  choropleth.md  clusters.md  configuration.md  coordinates.md  dataframe.md  drawing.md  export.md  faq.md  first-map.md  geodataframe.md  geometries.md  heatmaps.md  index.md  layers.md  markers.md  min-zoom.md  open-data.md  search.md  text-annotations.md  tooltips-popups.md
mapyta/: __init__.py  config.py  coordinates.py  dataframe.py  export.py  geojson.py  map.py  markdown.py  markers.py  mouse_position.py  server.py  style.py  tiles.py
pr-preview/pr-1/: index.html
pr-preview/pr-10/: 404.html  index.html  objects.inv
pr-preview/pr-11/: index.html  objects.inv
pr-preview/pr-12/: 404.html  index.html
pr-preview/pr-3/: 404.html  index.html  objects.inv
pr-preview/pr-4/: index.html
scripts/: generate_hero.py
search/: search_index.json
showcase/: index.html
tests/: __init__.py  conftest.py  test_data.py  test_dataframe.py  test_draw.py  test_export.py  test_geometry.py  test_layers.py  test_map.py  test_map_creation.py  test_markers.py  test_merge_and_chaining.py  test_open.py  test_utilities.py
tutorial/: index.html
(+297 files in other folders)
