[project]
name = "mapyta"
version = "0.2.0"
description = "Mapyta, open source python package for GIS mapping and visualization."
readme = "README.md"
requires-python = ">=3.12"
author = [
    { name = "Enrique García Méndez", email = "enriquegarcia@live.nl" },
]
keywords = [
    "GIS",
    "mapping",
    "visualization",
]
license = { text = "MIT" }
classifiers = [
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]

[project.optional-dependencies]
export = [
    "selenium>=4.0.0",
    "chromedriver-autoinstaller>=0.6.0",
]

[dependency-groups]
dev = [
    "ty==0.0.23",
    "ruff==0.15.6",
    "pre-commit==4.5.1",
    "types-shapely==2.1.0.20250917",
]
docs = [
    "properdocs>=1.6.7",
    "pygments ~= 2.19.1",
    "mkdocs-open-in-new-tab ~= 1.0.8",
    "mkdocstrings[python]>=0.29.1,<1.1.0",
    "mkdocs-awesome-nav>=3.1.2,<3.4.0",
    "natsort ~= 8.4.0",
    "markdown-exec[ansi]>=1.11.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-gen-files>=0.6.1",
]
test = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-describe==3.1.0",
    "pytest-pspec==0.0.4",
    "pytest-raises==0.11",
    "pytest-sugar>=1.1.1",
    "pytest-xdist==3.8.0",
    "typer>=0.24.0",
    "rich>=13.7.0",
]

[tool.pytest.ini_options]
addopts = "--cov=mapyta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mapyta"]
